kubernates/manifests/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    tier: backend
  name: backend
spec:
  containers:
  - image: nouraldeen152/app-backend:32
    name: backend
    ports:
    - containerPort: 3000
    resources:
      limits:
        cpu: "200m"  # 0.2 CPU core
      requests:
        cpu: "100m"   # 0.1 CPU core    
  nodeSelector:
    app: nour
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: backend
  name: backend
spec:
  type: NodePort
  selector:
    tier: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30008
      name: backend-svc
