kubernates/manifests/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    tier: frontend  
  name: frontend
spec:
  containers:
  - image: nouraldeen152/app-frontend:32
    name: frontend
    ports:
    - containerPort: 80
  nodeSelector:
    app: nour
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  # type: NodePort
  selector:
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30007
